외부 톰캣 사용

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,6 @@
 
     <groupId>phis.his.nu</groupId>
     <artifactId>nUTool</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     <name>nUTool</name>
     <description>nUTool</description>
     <properties>
@@ -42,6 +41,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
