--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <groupId>phis.his.nu</groupId>
     <artifactId>nUTool</artifactId>
     <name>nUTool</name>
+    <version>1</version>
     <description>nUTool</description>
     <properties>
         <java.version>11</java.version>
@@ -57,6 +58,11 @@
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.10.3</version>
         </dependency>
     </dependencies>
 
