--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,6 @@ spring.banner.location=banner/banner.txt
 ## server settings ##
 server.port=80
 
-## settings for jsp ==> not use jsp ##
+## settings for jsp  ##
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
