정규식 사용하여 로그처리하도록 변경 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.main.web-application-type=servlet
 
 ## log settings ##
 logging.level.root=info
-#logging.level.org.apache.ibatis=debug
-#logging.level.com.dnfbot=debug
+logging.level.org.apache.ibatis=debug
+logging.level.phis.his.nu=debug
 #logging.file.path=classpath:/../../../../logs/
 #logging.file.name=logs.txt
 #logging.logback.rollingpolicy.file-name-pattern=${LOG_FILE}.%d{yyyy-MM-dd}-%i.log
@@ -20,3 +20,26 @@ server.port=80
 ## settings for jsp  ##
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+
+
+#spring.edu.datasource.driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#spring.edu.datasource.jdbc-url: jdbc:log4jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.17.111.63)(PORT=1525)))(CONNECT_DATA=(SERVICE_NAME=TEST999TT)(SRVR=DEDICATED)))
+#spring.edu.datasource.username: mybatis
+#spring.edu.datasource.password: mybatis$
+#spring.edu.datasource.jmx-enabled: false
+
+#Oracle 설정
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=10.110.101.175)(PORT=1528))(CONNECT_DATA=(SERVER=dedicated)(SERVICE_NAME=DEVSCM)))
+spring.datasource.username=EDU
+spring.datasource.password=edu123!
+#spring.datasource.url=jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.17.111.63)(PORT=1525)))(CONNECT_DATA=(SERVICE_NAME=TEST999TT)(SRVR=DEDICATED)))
+#spring.datasource.username=mybatis
+#spring.datasource.password=mybatis$
+spring.datasource.dbcp2.initial-size=220
+spring.datasource.hikari.maximum-pool-size=500
+
+#Mybatis
+mybatis.type-aliases-package=phis.his.nu.logging.object.*
+mybatis.mapper-locations=mappers/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
