--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,19 @@
             <artifactId>jsoup</artifactId>
             <version>1.10.3</version>
         </dependency>
+        
+        <!-- Spring-Mybatis : mybatis-spring-boot-starter > spring-boot-starter-jdbc > HikariCP -->
+        <dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<scope>runtime</scope>
+		</dependency>
     </dependencies>
 
     <build>
